# jikan

./: .clippy.toml  Cargo.toml  DESIGN.md  README.md
.github/workflows/: bench.yml  ci.yml
crates/jikan-cli/: Cargo.toml
crates/jikan-cli/src/: config.rs  main.rs  run.rs  validate.rs
crates/jikan-core/: Cargo.toml
crates/jikan-core/src/: checkpoint.rs  error.rs  event.rs  lib.rs  position.rs  sink.rs  source.rs  stdout_sink.rs  table.rs  watchdog.rs
crates/jikan-kafka/: Cargo.toml
crates/jikan-kafka/src/: lib.rs  sink.rs
crates/jikan-mongo/: Cargo.toml
crates/jikan-mongo/src/: codec.rs  connector.rs  lib.rs  snapshot.rs
crates/jikan-mysql/: Cargo.toml
crates/jikan-mysql/src/: binlog.rs  codec.rs  connector.rs  lib.rs  snapshot.rs
crates/jikan-postgres/: Cargo.toml
crates/jikan-postgres/benches/: decode.rs
crates/jikan-postgres/src/: codec.rs  connector.rs  lib.rs  slot.rs  snapshot.rs
crates/jikan-snapshot/: Cargo.toml
crates/jikan-snapshot/benches/: snapshot.rs
crates/jikan-snapshot/src/: buffer.rs  engine.rs  lib.rs  merger.rs
crates/jikan-webhook/: Cargo.toml
crates/jikan-webhook/src/: lib.rs  sink.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  mock.rs
