[package]
name = "jikan-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "jikan"
path = "src/main.rs"

[dependencies]
jikan-core     = { path = "../jikan-core" }
jikan-postgres = { path = "../jikan-postgres" }
jikan-mysql    = { path = "../jikan-mysql" }
jikan-mongo    = { path = "../jikan-mongo" }
jikan-kafka    = { path = "../jikan-kafka" }
jikan-webhook  = { path = "../jikan-webhook" }
jikan-snapshot = { path = "../jikan-snapshot" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = { workspace = true }
toml = { workspace = true }
