[package]
name = "jikan-mysql"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
jikan-core = { path = "../jikan-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
mysql_async = "0.33"
