[package]
name = "jikan-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
jikan-core = { path = "../jikan-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
futures = { workspace = true }
