[package]
name = "jikan-webhook"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
jikan-core = { path = "../jikan-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
